# AbstractMesh

./: Cargo.toml  Readme.md  bezier-curves-notes.txt  todolist.md
assets/: test.amb  test.amj  test.json
examples/: basic.rs
examples/basic/: main.rs
examples/editor/: loader.rs  main.rs  modes.rs  selector.rs  settings.rs
old/: helloWorld.rs  load_glb.rs  old.rs
src/: generator.rs  helloWorld.rs  lib.rs  load_glb.rs  main.rs
src/structs/: bounds.rs  mod.rs  shapes.rs  vec3_array.rs
