[package]
name = "abstracted_mesh_rust"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_math = "0.11.2"
serde = "1.0.185"
serde_json = "1.0.105"
serde_cbor = "0.11.2"

[dev-dependencies]
bevy = "0.11.2"
bevy_panorbit_camera = "0.8"
egui = "0.22.0"
bevy_egui = "0.21.0"
bevy_rapier3d = "0.22.0"